--- a/app/views/products/dafoxtech.html.haml
+++ b/app/views/products/dafoxtech.html.haml
@@ -1,4 +1,8 @@
 .dafox-gradient
-    .max-w-2xl.mx-auto.px-4.py-8.md:py-12.flex.flex-col.md:flex-row.items-center
+    .max-w-6xl.mx-auto.px-4.pt-8.md:pt-12.flex.flex-col.lg:flex-row.items-center
         %div{class: "md:w-1/2 mb-8 md:mb-0"}
-            %h2 Naur
+            =image_tag("dafox.png", class: "mb-4")
+            %h2.text-3xl.md:text-4xl.font-bold.mb-4 Enjoy Up to 20% Off on Your First Purchase!
+            %p.text-lg.mb-6 For a Seamless & Hassle-FREE eLoading services, Gcash, Maya Cash-in and Bills Payment.
+        %div{class: "md:w-1/2 relative"}
+            =image_tag("cta-img.png")
