--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,8 +34,10 @@
         .flex.item-center.justify-start.space-x-5
           = image_tag asset_url("flarego-shop-logo.png")
         %div{:class => "w-1/3"}
-          =form_tag search_products_path,method: :get, role: "search" do
-            =text_field_tag :search, params[:search], placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
+          =form_with url: search_products_path, method: :post do |f|
+            =f.search_field :search_title, oninput: "this.form.requestSubmit()"
+          -# =form_tag search_products_path,method: :get, role: "search" do
+          -#   =text_field_tag :search, params[:search], placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
     
         .flex.justify-end.items-center.space-x-2.text-white
           = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
@@ -62,6 +64,7 @@
         .flex.items-center.space-x-3.text-white
           = icon('fa-solid', 'calendar')
           = link_to "30 Days Free Return",root_path
+    %div#search_results
     = yield
     %footer.text-white.py-12{:class => "bg-[#06032C] mt-[15%]"}
       .container.mx-auto.px-4
