--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,4 +1,47 @@
 %section.py-4.antialiased
     %h2.text-xl.font-semibold.text-gray-900.sm:text-2xl.text-center Shopping Cart
 %p#notice.py-2.px-3.bg-green-50.mb-5.text-green-500.font-medium.rounded-lg.inline-block= notice
-=render "cart_items", cart_items: @cart.cart_items
+=link_to "Continue Shopping", root_path
+-if current_cart.cart_items.any?
+    .container.mx-auto.p-4
+        .flex.flex-col.lg:flex-row.gap-8
+            %div.overflow-x-auto{class:"lg:w-2/3"}
+                %div{class:"min-w-[600px]"}
+                    %table.w-full
+                        %thead
+                            %tr.border-b
+                                %th.text-left.py-2 Product
+                                %th.text-center.py-2 Quantity
+                                %th.text-right.py-2 Price
+                                %th.text-right.py-2 Subtotal
+                        %tbody
+                            -current_cart.cart_items.each do |cart|
+                                %tr.border-b
+                                    %td.py-4
+                                        .flex.items-center
+                                            -if cart.product.product_image.attached?
+                                                =image_tag(cart.product.product_image, class:"w-20 h-20 object-cover mr-4")
+                                                %div
+                                                    %h3.font-semibold
+                                                        =cart.product.name
+                                                        =button_to "X Remove", remove_from_cart_cart_path(cart), method: :delete, class:"text-sm text-gray-500 flex items-center mt-1"
+                                    %td.py-4
+                                        =render "cart_quantity", cart: cart
+                                                
+                                    %td.py-4.text-right
+                                        =number_to_currency(cart.product.price, unit: "PHP ")
+                                    %td.py-4.text-right
+                                        =number_to_currency(cart.quantity * cart.product.price, unit: "PHP ")  
+            %div{class:"lg:w-1/3"}
+                .card-wrapper
+                    %h2.text-xl.font-semibold.mb-4 Cart 
+                    .flex.justify-between.mb-2
+                        %span Total
+                        %span 
+                            =number_to_currency(@cart.total, unit: "PHP ")
+    .text-center
+        =link_to "Checkout", new_order_path, class:"btn-cta"
+        
+-else
+    %h1.font-extrabold.text-7xl.text-center Your cart is empty   
+    =link_to "Continue shopping", root_path, class:"btn-cta"   
