--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,10 +35,8 @@
           = image_tag asset_url("flarego-shop-logo.png")
         %div{:class => "w-1/3"}
           =form_with url: search_products_path, method: :post do |f|
-            =f.search_field :search_title, oninput: "this.form.requestSubmit()"
-          -# =form_tag search_products_path,method: :get, role: "search" do
-          -#   =text_field_tag :search, params[:search], placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
-    
+            =f.search_field :search_title, oninput: "this.form.requestSubmit()",placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
+          
         .flex.justify-end.items-center.space-x-2.text-white
           = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
           -if user_signed_in?
