--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -46,7 +46,7 @@
             .flex.flex-col.items-center.space-y-5
               .flex.items-center.space-x-3
                 =f.label :subject
-                =f.text_field :subject, class: "border-2 border-sky-500"
+                =f.text_field :subject, class: "border-b border-sky-500"
               .flex.items-center.space-x-3
                 =f.label :content
                 =f.text_area :content
