--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -17,7 +17,7 @@
                         =f.email_field :email,  class: "form-field"
                 
                 =turbo_frame_tag :cs_select do
-                    %div{"data-controller": "form-element"}
+                    %div{"data-controller": "form-element", class: "space-y-4"}
                         =f.button "submit", formaction: new_order_path, formmethod: :get, data: {form_element_target: "autoSubmitBtn", turbo_frame: :cs_select}
                      
                         %div
@@ -44,8 +44,9 @@
                     %div
                         =f.label :house_number, class: "form-label"
                         =f.number_field :house_number, class: "form-field"
-
-                =f.submit "Place Order", class: "btn-cta"
+                .flex.flex-row.space-x-4.justify-end
+                    =link_to "Back to cart", cart_path, class: "btn-cta w-20 text-center"
+                    =f.submit "Place Order", class: "btn-cta w-20"
         %div{class: "lg:w-1/3"}
             .card-wrapper
                 %h2.text-2xl.font-bold.mb-6 Order Summary
