--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -16,24 +16,21 @@
                         =f.label :email, class: "form-label"
                         =f.email_field :email,  class: "form-field"
                 
-                =turbo_frame_tag :cs_select do
-                    %div{"data-controller": "form-element", class: "space-y-4"}
-                        =f.button "submit", formaction: new_order_path, formmethod: :get, data: {form_element_target: "autoSubmitBtn", turbo_frame: :cs_select}
-                     
+                %div{"data-controller": "form-element", class: "space-y-4"}
+                    =f.button "submit", formaction: new_order_path, formmethod: :get, data: {form_element_target: "autoSubmitBtn", turbo_frame: :cs_select}
+                    =turbo_frame_tag :cs_select do
+                        %div
+                            =f.label :country, class: "form-label"
+                            =f.select :country,@order.countries.invert,{include_blank: true}, {data: {action: "change->form-element#autoSubmit"}, class: "form-field"}
+                        
                         %div
                             =f.label :province, class: "form-label"
-                            =f.select :province,@order.countries,{include_blank: true},class:"form-field",  data: {action: "change->form-element#autoSubmit"}
-                        
-                       
+                            =f.select :province, @order.provinces.invert , {include_blank: true}, {data: {action: "change->form-element#autoSubmit"}, class: "form-field"}
+
                         %div
                             =f.label :city, class: "form-label"
-                            =f.select :city, @order.states , {include_blank: true},class:"form-field", data: {action: "change->form-element#autoSubmit"}
-
+                            =f.select :city, @order.cities, {include_blank: true},{class: "form-field"}
                         
-                        %div
-                            =f.label :barangay, class: "form-label"
-                            =f.select :barangay, @order.cities, {include_blank: true},class:"form-field"
-
                 %div
                     =f.label :zip_code, class: "form-label"
                     =f.number_field :zip_code, class: "form-field"
