--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,28 +1,35 @@
-.flex.flex-col.items-center
-  %h1.text-2xl.font-bold.uppercase sign up
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-    = render "devise/shared/error_messages", resource: resource
-    .field.flex.flex-col.pb-3
-      = f.label :first_name
-      = f.text_field :first_name, autofocus: true,placeholder: "First Name",class:"rounded-2xl"
-    .field.flex.flex-col.pb-3
-      = f.label :last_name
-      = f.text_field :last_name, autofocus: true,placeholder:"Last Name",class:"rounded-2xl"
-    .field.flex.flex-col.pb-3
-      = f.label :email
-      = f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"E-mail Address" ,class:"rounded-2xl"
-    .field.flex.flex-col.pb-3
-      = f.label :password
-      - if @minimum_password_length
-        %em
-          (#{@minimum_password_length} characters minimum)
-      = f.password_field :password, autocomplete: "new-password",class:"rounded-2xl"
-    .field.flex.flex-col.pb-3
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, autocomplete: "new-password",class:"rounded-2xl"
-    .field.flex.flex-col.pb-3
-      =f.label :avatar
-      =f.file_field :avatar
-    .actions
-      = f.submit "Sign up"
-    = render "devise/shared/links"
+.flex-grow.flex.items-center.justify-center.py-8.px-4.sm:px-6.lg:px-8
+  .max-w-md.w-full
+    %div
+      %h2.mt-6.text-center.text-3xl.font-extrabold.text-gray-900.uppercase create account
+      
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        -resource.errors.each do |err|
+          .bg-red-50.text-red-500.px-3.py-2.font-medium.rounded-lg.mt-3
+            = err.full_message
+        .space-y-2
+          %div
+            = f.label :first_name
+            = f.text_field :first_name, autofocus: true,placeholder: "First Name",class:"form-field"
+          %div
+            = f.label :last_name
+            = f.text_field :last_name, autofocus: true,placeholder:"Last Name",class:"form-field"
+          %div
+            = f.label :email
+            = f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"E-mail Address" ,class:"form-field"
+          %div
+            =f.label :password
+            -if @minimum_password_length
+              %em
+                (#{@minimum_password_length} characters minimum)
+            = f.password_field :password, autocomplete: "new-password",class:"form-field"
+          %div
+            = f.label :password_confirmation
+            = f.password_field :password_confirmation, autocomplete: "new-password",class:"form-field"
+          .flex.flex-col
+            =f.label :avatar
+            =f.file_field :avatar
+          .max-w-40.mx-auto
+            = f.submit "Create", class: "btn-cta"
+          .text-center.text-sm.hover:underline
+            =render "devise/shared/links"
