--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -16,4 +16,80 @@
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   %body
+    %nav.bg-gradient-to-b{:class => "from-[#151062] to-[#06032C]"}
+      .flex.flex-wrap.justify-between.items-center.max-w-screen-2xl.mx-auto.py-3.p-4.lg:py-2
+        .flex.item-center.space-x-5
+          %a.text-sm.text-white.hover:underline{:href => "#"}
+            = icon('fa-solid', 'phone',class:"text-[#BBB6FF]")
+            %span.pl-2 (555) 412-1234
+          %a.text-sm.text-white.hover:underline{:href => "#"}
+            = icon('fa-solid', 'message',class:"text-[#BBB6FF]")
+            %span.pl-2 flaregoshoponline@gmail.com
+        %a.text-sm.text-white.hover:underline{:href => "#"}
+          = icon('fa-solid', 'location-dot',class:"text-[#BBB6FF]")
+          %span.pl-2 Track Order
+      .flex.flex-wrap.justify-between.items-center.max-w-screen-2xl.mx-auto.p-4.py-3
+        .flex.item-center.justify-start.space-x-5
+          = image_tag asset_url("flarego-shop-logo.png")
+        %div{:class => "w-1/3"}
+          =form_with url: search_products_path, method: :post do |f|
+            =f.search_field :search_title, oninput: "this.form.requestSubmit()",placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
+          
+        .flex.justify-end.items-center.space-x-2.text-white
+          = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
+          -if user_signed_in?
+            = button_to "Sign Out",destroy_user_session_path, method: :delete,class:"pr-3"
+          -else
+            =button_to "Sign In", new_user_session_path,class: "pr-3"  
+          = icon('fa-solid', 'heart',class:"text-[#BBB6FF]")
+          = link_to "Wishlist",root_path,class:"pr-3"
+          = icon('fa-solid', 'cart-shopping',class:"text-[#BBB6FF]")
+    
+          = link_to "Cart",cart_path,class:"pr-3"
+  %nav{:class => "bg-[#181546]"}
+    .flex.flex-wrap.justify-between.items-center.max-w-screen-2xl.mx-auto.py-3.p-4
+      .flex.item-center.space-x-5
+        %h1.text-white Categories
+      .flex.justify-center.items-center.space-x-3.text-white
+        = link_to "Home",root_path
+        = link_to "DafoxTech",collections_dafoxtech_path
+        = link_to "AdoPisoft",collections_adopisoft_path
+        = link_to "On Sale",root_path
+        = link_to "Blogs and Events",root_path
+        = link_to "FAQs",root_path
+      .flex.items-center.space-x-3.text-white
+        = icon('fa-solid', 'calendar')
+        = link_to "30 Days Free Return",root_path
+  .flex.flex-col
     = yield
+  %footer.text-white.py-12{:class => "bg-[#06032C] mt-[15%]"}
+    .container.mx-auto.px-4
+      .grid.grid-cols-1.md:grid-cols-2.lg:grid-cols-4.gap-8
+        %div
+          .flex.items-center.mb-4
+            = link_to image_tag("flarego-shop-logo.png"), root_path
+          %p.text-sm.text-gray-400 It started with a crazy idea, and is now being used by thousands of people nationwide and in other countries.
+        %div
+          %h3.text-lg.font-semibold.mb-4 Quicklinks
+          .grid.grid-cols-1.md:grid-cols-3.gap-8
+            %div
+              %ul.space-y-2
+                -["Home","DafoxTech","AdoPisoft"].each do |i|
+                  %li
+                    =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"
+            %div        
+              %ul.space-y-2
+                -["On Sale","Blog and Events","FAQs"].each do |i|
+                  %li
+                    =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"
+            %div        
+              %ul.space-y-2
+                -["On Sale","Blog and Events","FAQs"].each do |i|
+                  %li
+                    =link_to i, root_path, class: "hover:text-cyan-400 transition-colors"  
+        %div
+          %h3.text-lg.font-semibold.mb-4 Newsletter
+          -# fix this code to create a new invitation
+          =form_with model: User, url: user_invitation_path, local: true do |f|      
+            =f.text_field :email
+            =f.submit "sub"
