--- a/app/views/products/_search_results.html.haml
+++ b/app/views/products/_search_results.html.haml
@@ -1,4 +1,5 @@
-
--products.each do |product|
-    =product.price
-    = link_to highlight(product.name, params[:search_title]), product
+.flex.flex-col
+    -products.each do |product|
+        %li
+            =product.price
+            = link_to highlight(product.name, params[:search_title]), product
