--- a/app/views/products/adopisoft.html.haml
+++ b/app/views/products/adopisoft.html.haml
@@ -55,3 +55,4 @@
                             .star-rating{style: "--rating: #{product.average_rating}; --total-stars: 5;"}
                                 .stars-outer
                                     .stars-inner
+                =paginate @products
