--- a/app/views/accounts/details.html.haml
+++ b/app/views/accounts/details.html.haml
@@ -1,8 +1,14 @@
--@options.each do |option|
-    %li
-        =link_to option, account_path(option: option), data: {turbo_frame: 'tab_pane'}
-%turbo-frame#tab_pane
-    =render "#{params[:option]&.downcase || 'account'}"
-
-=button_to "Log out", destroy_user_session_path, method: :delete
-
+.min-h-screen.py-8
+    .mx-auto.max-w-7xl
+        %div{class: "grid gap-8 md:grid-cols-[300px_1fr]"}
+            .card-wrapper
+                .mb-6.text-center
+                    .inline-block
+                        =image_tag @user.image_webp, class: "w-20 h-20 rounded-full" if @user.avatar.attached?
+                %nav.space-y-2.flex.flex-col
+                    -@options.each do |option|
+                        =link_to option, account_path(option: option), data: {turbo_frame: 'tab_pane'}, class: "hover:text-sky-500 #{'text-sky-500' if params[:option] == option}"
+                    =button_to "Log out", destroy_user_session_path, method: :delete
+            .p-6
+                %turbo-frame#tab_pane
+                    =render "#{params[:option]&.downcase || 'account'}"
