--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
     %link{:href => "/icon.png", :rel => "icon", :type => "image/png"}/
     %link{:href => "/icon.svg", :rel => "icon", :type => "image/svg+xml"}/
     %link{:href => "/icon.png", :rel => "apple-touch-icon"}/
+    %script{src: "https://js.stripe.com/v3/"}
     = stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css", media: "all"
 
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
@@ -38,10 +39,11 @@
             =f.search_field :search_title, oninput: "this.form.requestSubmit()",placeholder: "Find products", class: "w-full peer z-[21] px-6 py-4 rounded-2xl outline-none duration-200 ring-2 ring-[transparent] focus:ring-[#11BE86]"
           
         .flex.justify-end.items-center.space-x-2.text-white
-          = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
           -if user_signed_in?
-            = link_to "My Account",account_path,class:"pr-3"
+            =image_tag current_user.image_webp, class: "w-5 h-5 rounded-full" if current_user.avatar.attached?
+            = link_to current_user.email,account_path,class:"pr-3"
           -else
+            = icon('fa-solid', 'user',class:"text-[#BBB6FF]")
             =link_to "Sign In", new_user_session_path,class: "pr-3"  
           = icon('fa-solid', 'heart',class:"text-[#BBB6FF]")
           = link_to "Wishlist",root_path,class:"pr-3"
